--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "metanet-react-prompts",
+  "name": "metanet-react-prompt",
   "version": "0.1.0",
   "description": "Onboard users to the MetaNet",
-  "repository": "git+https://github.com/p2ppsr/metanet-react-prompts",
+  "repository": "git+https://github.com/p2ppsr/metanet-react-prompt",
   "author": "Peer-to-Peer Privacy Systems Research LLC",
   "license": "Open BSV License",
   "main": "./out/src/index.js",
@@ -30,8 +30,6 @@
     "list": "^2.0.19",
     "npm": "^10.4.0",
     "react": "*",
-    "react-device-detect": "^2.2.2",
-    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^8.2.0"
   },
   "devDependencies": {
