--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "standard": "^17.0.0",
     "typescript": "^5.3.3"
   },
