--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metanet-react-prompt",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Onboard users to the MetaNet",
   "repository": "git+https://github.com/p2ppsr/metanet-react-prompt",
   "author": "Peer-to-Peer Privacy Systems Research LLC",
@@ -27,11 +27,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.15.10",
-    "@mui/styles": "^5.10.10",
     "@mui/system": "^5.15.9",
     "list": "^2.0.19",
-    "npm": "^10.4.0",
-    "react": "*",
+    "npm": "^10.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toastify": "^8.2.0"
   },
   "devDependencies": {
@@ -40,14 +40,10 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
     "standard": "^17.0.0",
-    "typescript": "^5.3.3"
-  },
-  "peerDependencies": {
-    "@babbage/sdk": "^0.4.25",
-    "react": "*",
-    "react-dom": "*"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
