--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build:tsc": "tsc",
     "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "tsc && webpack --config webpack.prod.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "eslintConfig": {
